sprite is now able to move

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id = 'canvas1'></canvas>
+    <canvas id = 'canvas1'>
+        <h1>Hello World!</h1>
+    </canvas>
     <script src = 'script.js'></script>
 </body>
 </html>
