border collision now complete

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+
+<h1 id = 'score'>Score:</h1>
+<h1 id ='timeLeft'>Time Left:</h1>
     <canvas id = 'canvas1'>
-        <h1>Hello World!</h1>
     </canvas>
     <script src = 'script.js'></script>
 </body>
