started to impliment countdown timer

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-
-<h1 id = 'score'>Score:</h1>
-<h1 id ='timeLeft'>Time Left:</h1>
+    
+     <h1 id ='countdown'>Time left:</h1>
     <canvas id = 'canvas1'>
     </canvas>
     <script src = 'script.js'></script>
