--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-     <h1 id ='countdown'>Time left:</h1>
+     <h2>Score:</h2>
+     <h2 id ='score'>0</h2>
     <canvas id = 'canvas1'>
     </canvas>
     <script src = 'script.js'></script>
