game over message added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-     <h2>Score:</h2>
-     <h2 id ='score'>0</h2>
+    <div id = 'game-over'>
+        <h1>Game Over!!!</h1>
+    </div>
+     <h2>Score:<span id ='score'>0</span></h2>
+     <h2>Time:  <span id = 'time'></span></h2>
     <canvas id = 'canvas1'>
+        
     </canvas>
     <script src = 'script.js'></script>
 </body>
