--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div id = 'game-over'>
         <h1>Game Over!!!</h1>
     </div>
+    <div id = 'you-win'>
+        <h1>You Win!!!!!!</h1>
+    </div>
      <h2>Score:<span id ='score'>0</span></h2>
      <h2>Time:  <span id = 'time'></span></h2>
     <canvas id = 'canvas1'>
