score and time centered

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <div id = 'you-win'>
         <h1>You Win!!!!!!</h1>
     </div>
+    <div id = 'score-container'>
      <h2>Score:<span id ='score'>0</span></h2>
+    </div>
+    <div id = 'time-container'>
      <h2>Time:  <span id = 'time'></span></h2>
     <canvas id = 'canvas1'>
+    </div>
         
     </canvas>
     <script src = 'script.js'></script>
