Win and Lose images added to the end of game play

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         <div><button id = 'nxt-level-button'>Next Level!!</button></div>
     </div>
 
+    <div class = 'sad-rabbit-container'>
+      <img src = 'images/sad rabbit.png' id = 'you-lose' alt = 'rabbit playing the violin'>
+    </div>
+
+    <div class = 'happy-rabbit-container'>
+        <img src = 'images/happyrabbit.png' id = 'you-win-rabbit' alt = 'rabbit with a carrot'>
+      </div>
+
     
     
     <script src = 'script.js'></script>
